--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     background-color: #f8f9fa; /* Fondo gris claro */
     color: #444141; /* Texto oscuro */
     background-color: #333;
-    background-image: url(photo-1470790376778-a9fbc86d70e2.jpg);
+    background-image: url(wallpaperflare.com_wallpaper.jpg);
 }
 
 .container {
